src/validation/tests/snapshots/rusty__validation__tests__array_validation_test__structs_within_array_initializers.snap
---
source: src/validation/tests/array_validation_test.rs
expression: diagnostics
---
error: Structs within arrays must be surrounded by `()`
   ┌─ <internal>:13:64
   │
13 │         arr_two : ARRAY[1..2] OF foo := [(id := 0, arr := [1, 2]), id := 1, arr := [1, 2]];
   │                                                                    ^^^^^^^ Structs within arrays must be surrounded by `()`

error: Structs within arrays must be surrounded by `()`
   ┌─ <internal>:13:73
   │
13 │         arr_two : ARRAY[1..2] OF foo := [(id := 0, arr := [1, 2]), id := 1, arr := [1, 2]];
   │                                                                             ^^^^^^^^^^^^^ Structs within arrays must be surrounded by `()`


